--- a/index1.html
+++ b/index1.html
@@ -1,126 +1,61 @@
-<!DOCTYPE HTML>
-<!--
-	Tessellate by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>สอบ</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<link rel="stylesheet"
-href="https://fonts.googleapis.com/css?family=Tangerine">
+<head>
+<title>สวัสดี</title>
 <style>
-body {
-background-image: url("header.jpg");
-
-font-family: 'Prompt', sans-serif;
-font-size: 25px;
+body{
+	 background-color:#FFB530;
 }
 </style>
 </head>
-	<body class="is-preload">
+<body>
+<h1 align="center">วัดมหาธาตู</h1>
 
-		<!-- Header -->
+<h2><a name="รูป">รูป</a></h2>
+<h1 align="center"><img src="Chanon.jpg" height="500"></h1>
 
-		<!-- First -->
-			<section id="first" class="main">
-				<header>
-					<div >
-						<h2>วัดมหาธาตุ</h2>
-						<h1>ประสบการณ์จากการท่องเที่ยวอย่างต่อเนื่องอยุธยาเป็นอีกที่ที่ให้ทุกคนได้สัมผัสกับการชื่นชมโปราณสถานและวัดต่างๆ</h1>
-						<p>เรียกว่านาทีนี้หากใครไม่รู้จักละครยอดฮิต“บุพเพสันนิวาส”เห็นทีจะตกกระแสไปเสียแล้วเพราะความแรงของละครดังกล่าว
-							ไม่เพียงแต่จะนำพาคำศัพท์ไพเราะหูอย่างคำว่า“ออเจ้า”มาให้ชาวเรายุคนี้ได้เอื้อนเอ่ยกันทั่วบ้านทั่วเมืองเท่านั้นในเรื่องของวัดสำคัญทางประวัติศาสตร์อันได้แก่“วัดไชยวัฒนาราม”ซึ่งแม่หญิงการะเกดมักพูดถึงบ่อยๆ</p>
-					</div>
-				</header>
-				<div class="content dark style1 featured">
-					<div class="container">
-						<div class="row">
-							<div class="col-4 col-12-narrow">
-								<section>
-									<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
-									<header>
-										<h3>เวลาเปิด</h3>
-									</header>
-									<p>วันเปิดทำการ จันทร์ - ศุกร์ ตั้งแต่เวลา 09.00 - 18.00 น.</p>
-								</section>
-							</div>
-							<div class="col-4 col-12-narrow">
-								<section>
-									<span class="feature-icon"><span class="icon fa-bolt"></span></span>
-									<header>
-										<h3>รายละเอียด</h3>
-									</header>
-									<p>1.ตรงกลุ่มเป้าหมายที่รักการเดินทางท่องเที่ยวอย่างแท้จริงโดยเน้นคุณภาพความละเอียดของข้อมูลและมีการอัพเดทภาพข้อมูล ให้ทันสมัยเสมอ
-										รวมถึงให้ความสำคัญกับรูปภาพท่องเที่ยวที่สวยงามเพื่อจูงใจในการท่องเที่ยวยิ่งขึ้นซึ่งทำให้ เว็บไปด้วยกัน มีเอกลักษณ์ที่แตกต่าง
-										 เราพร้อมดูแลและให้คำปรึกษาเรื่องการโฆษณาประชาสัมพันธ์ให้กับทุกท่าน
-										 </p>
-								</section>
-							</div>
-							<div class="col-4 col-12-narrow">
-								<section>
-									<span class="feature-icon"><span class="icon fa-address-card-o"></span></span>
-									<header>
-										<h3>ข้อมูล</h3>
-									</header>
-									<p>เบอร์ติดต่อสอบถามเกี่ยวกับเรื่องโฆษณา โทร 095 965 9245
- E-mail = paiduaykan.com@gmail.com</p>
-								</section>
-							</div>
-							<div class="col-12">
-								<footer>
-									<a href="#second" class="button scrolly">คลิกที่นี่</a>
-								</footer>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
+<ul>
+<li><a href="#รูป">รูป</a></li>
+</ul>
+<li>ชานนทร์ ลีลาพิพิะพัธน์</li>
+<li>นักศึกษาชั้นปีที่3</li>
+<li>กำลังศึกษาอยุ่ที่มหาวิทยาลัยราชภัฏพระนครศรีอยุธยา</li>	
 
-		<!-- Second -->
-			<section id="second" class="main">
 
-				<div class="content dark style2">
-					<div class="container">
-						<div class="row">
-							<div class="col-4 col-12-narrow">
-								<section>
-									<h3>ข้อมูลทั่วไป</h3>
-									  <p>วัดมหาธาตุตั้งอยู่เชิงสะพานป่าถ่านทางทิศตะวันออกของวัดพระศรีสรรเพชญ์มีสิ่งที่โดดเด่นคือเศียรพระพุทธรูปกว่าร้อยปีในรากไม้โดยเศียรพระพุทธรูป
-										เป็นพระพุทธรูปหินทรายเหลือแค่ส่วนเศียรสำหรับองค์พระนั้นหายไปและเป็นเศียรพระพุทธรูปเป็นศิลปะอยุธยาวางอยู่ในรากโพธิ์ข้างวิหาร
-										คาดว่าเศียรพระพุทธรูปนี้จะหล่นลงมาอยู่ที่โคนต้นไม้ในสมัยเสียกรุงจนรากไม้ขึ้นปกคลุมทำให้มีความงดงามแปลกตาจนเลื่องลือกลายเป็นสิ่งมหัศจรรย์
-										ทำให้วัดแห่งนี้กลายเป็นวัดที่มีชื่อเสียงและเป็นที่รู้จักทั้งชาวไทยและชาวต่างชาติพงศาวดารบางฉบับกล่าวว่าวัดนี้สร้างในสมัยสมเด็จพระบรมราชาธิราชที่1
-										<p>ต่อมาสมเด็จพระราเมศวรโปรดเกล้าฯให้อัญเชิญพระบรมสารีริกธาตุมาบรรจุไว้ใต้ฐานพระปรางค์ประธานของวัดเมื่อพ.ศ.1927พระปรางค์วัดมหาธาตุ
-										ถือเป็นปรางค์ที่สร้างในระยะแรกของสมัยอยุธยาซึ่งได้รับอิทธิพลของปรางค์ขอมปนอยู่ชั้นล่างก่อสร้างด้วยศิลาแลงแต่ที่เสริมใหม่ตอนบนเป็นอิฐถือปูน
-										สมเด็จพระเจ้าปราสาททองได้ทรงปฏิสังขรณ์พระปรางค์ใหม่โดยเสริมให้สูงกว่าเดิมแต่ขณะนี้ยอดพังลงมาเหลือเพียงชั้นมุขเท่านั้นจึงเป็นที่น่าเสียดายเพราะมีหลักฐานว่าเป็นปรางค์ที่มีขนาดใหญ่
-										มากและก่อสร้างอย่างวิจิตรสวยงามมากเมื่อพ.ศ.2499กรมศิลปากรได้ขุดแต่งพระปรางค์แห่งนี้พบของโบราณหลายชิ้นที่สำคัญคือผอบศิลาภายในมีสถูปซ้อนกัน7ชั้นแบ่งออกเป็น
-										ชินเงินนากไม้จันทร์แดงแก้วโกเมนและทองคำชั้นในบรรจุพระบรมสารีริกธาตุและเครื่องประดับอันมีค่าปัจจุบันพระบรมสารีริกธาตุนำไปประดิษฐานไว้ที่ี่พิพิธภัณฑ์สถานแห่งชาติเจ้าสามพระยา<br /></p>
-								<footer>
 
-									</footer>
-								</section>
-							</div>
-							<div class="col-8 col-12-narrow">
-								<div class="row">
-									<div class="col-6"><a class="image fit"><img src="images/pic01.jpg" alt="" /></a></div>
-									<div class="col-6"><a  class="image fit"><img src="images/pic02.jpg" alt="" /></a></div>
-									<div class="col-6"><a  class="image fit"><img src="images/pic03.jpg" alt="" /></a></div>
-									<div class="col-6"><a  class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-									<div class="col-6"><a  class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-									<div class="col-6"><a  class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-									<div class="col-6"><a  class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
-									<div class="col-6"><a  class="image fit"><img src="images/pic08.jpg" alt="" /></a></div>
-			</section>
 
-			<section id="fourth" class="main">
-				<header>
-					<div class="container">
-						<h2>ขอบคุณที่มาเยี่ยมชมเว็บเรา</h2>
-						</div>
-				</header>
+<p align="center"><table border="3"></p>
+<tr>
+<th colspan="3">สีที่ชอบ</th>
+</tr>
 
-	</body>
+<tr>
+<td>แดง</td>
+<td>เขียว</td>
+<td>เหลือง</td>
+</tr>
+<tr>
+<td>นำเงิน</td>
+<td>ฟ้า</td>
+<td>ส้ม</td>
+</tr>
+</table>
+
+<br>
+
+
+
+<b>รายการที่ชอบ</b>
+<br>
+<ul>
+<li>เล่นกีฬา</li>
+<li>ออกกำลังกาย</li>
+<li>เล่นเกมส์</li>
+</ul>
+
+
+<p><a href="#top">Back to top</a></p>
+<p><a href="chanon1001.html">Back to home</a></p>
+
+
+</body>
 </html>
